--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -90,7 +90,16 @@ h2.collage-wrapper-title, .collection-list-title {
 @media screen and (min-width: 750px){
 .product--stacked .product__info-container--sticky{top: 4rem!important;}
 }
-
+.product__title h1 {
+  font-size: 19px;
+  font-weight: 700;
+  line-height: 30px;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  display: block;
+  font-family: Lato,sans-serif;
+  color: #222;
+}
 .product__description p {
     line-height: 20px;
     margin: 2px;
@@ -100,10 +109,12 @@ h2.collage-wrapper-title, .collection-list-title {
 }
 .product__info-container {
     text-align: center;
+    color: #565656;
 }
 .product__accordion .summary__title {
     text-align: center;
     justify-content: center;
+    color: #565656;
 }
 .accordion .summary__title+.icon-caret{display:none;}
 .product__info-wrapper{padding-right:4rem;}
