--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -111,8 +111,9 @@ h2.collage-wrapper-title, .collection-list-title {
 .product__accordion .summary__title {
     text-align: center;
     justify-content: center;
-    color: #565656;
+
 }
+.product__accordion .summary__title .accordion__title{ color: #565656;}
 .accordion .summary__title+.icon-caret{display:none;}
 .product__info-wrapper{padding-right:4rem;}
 
