--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -103,6 +103,7 @@ h2.collage-wrapper-title, .collection-list-title {
 .product__description p {
     line-height: 20px;
     margin: 2px;
+    font-size: 14px;
 }
 .product__info-container {
     text-align: center;
