--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -118,5 +118,8 @@ h2.collage-wrapper-title, .collection-list-title {
 .accordion .summary__title+.icon-caret{display:none;}
 .product__info-wrapper{padding-right:4rem;}
 
-
+.contact__fields .field {
+  border: 1px solid #c2bfba;
+  margin: 5px 0;
+}
 
