--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -119,7 +119,7 @@ h2.collage-wrapper-title, .collection-list-title {
 .product__info-wrapper{padding-right:4rem;}
 
 .contact__fields .field {
-  border: 1px solid #c2bfba;
+  border: 1px solid #c2bfba!important;
   margin: 5px 0;
 }
  
