--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -118,7 +118,7 @@ h2.collage-wrapper-title, .collection-list-title {
 .accordion .summary__title+.icon-caret{display:none;}
 .product__info-wrapper{padding-right:4rem;}
 
-.contact__fields .field {
+#ContactForm .field {
   border: 1px solid #c2bfba!important;
   margin: 5px 0;
 }
