--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -100,7 +100,7 @@ h2.collage-wrapper-title, .collection-list-title {
   font-family: Lato,sans-serif;
   color: #222;
 }
-.product__description p {
+.product__description p, .accordion__content p {
     line-height: 20px;
     margin: 2px;
     font-size: 14px;
