--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -124,3 +124,10 @@ h2.collage-wrapper-title, .collection-list-title {
   margin: 5px 0;
 }
   
+@media (max-width:990px){
+  .page-widthh {
+    max-width: var(--page-width);
+    margin: 0 auto;
+    padding: 0 1.5rem;
+}
+}
