--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -20,9 +20,9 @@ div#shopify-section-header {
 /* header end */
 @media screen and (max-width: 749px){
 .banner--mobile-bottom:not(.banner--stacked) .banner__content {
-    order: 1;
+    order: 1!important;
 }
-.banner--mobile-bottom:not(.banner--stacked) .banner__media {    order: 2;}
+.banner--mobile-bottom:not(.banner--stacked) .banner__media {    order: 2!important;}
 }
 
 @media screen and (min-width: 750px){
