--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -138,3 +138,7 @@ h2.collage-wrapper-title, .collection-list-title {
     padding: 0 1.5rem;
 }
 }
+
+.product-form__buttons {
+  margin: 0 auto;
+}
