--- a/assets/extend.css.liquid
+++ b/assets/extend.css.liquid
@@ -141,4 +141,7 @@ h2.collage-wrapper-title, .collection-list-title {
 
 .product-form__buttons {
   margin: 0 auto;
+} 
+a.full-unstyled-link {
+  text-decoration: none!important;
 }
